update README with heroku link

--- a/README.rdoc
+++ b/README.rdoc
@@ -3,3 +3,5 @@
 Your place for finding stuff you want and dumping stuff you don't.
 
 This web app was written for demostrating a clean Ruby on Rails app.
+
+This has been deployed to heroku at http://stuff-finder.herokuapp.com.
